logs/rem-cli-log_r2024-10-03_01-18-02.log
2024-10-03 01:13:25 [INFO] - Application Started
2024-10-03 01:13:25 [INFO] - Running 'test' subcommand
2024-10-03 01:13:25 [INFO] - Verbose: yes
2024-10-03 01:13:25 [INFO] - Starting tests...
2024-10-03 01:13:26 [INFO] - Test 1 | PASSED | PASSED | PASSED: argument_and_locals in 1.45s
2024-10-03 01:13:27 [INFO] - Test 2 | FAILED: No Extract Function Assist found for the given selection of assists [] | N/A | N/A: argument_form_expr in 1.23s
2024-10-03 01:13:29 [INFO] - Test 3 | FAILED: No Extract Function Assist found for the given selection of assists [] | N/A | N/A: argument_used_twice_form_expr in 1.25s
2024-10-03 01:13:30 [INFO] - Test 4 | PASSED | PASSED | PASSED: break_from_nested_and_outer_loops in 1.23s
2024-10-03 01:13:32 [INFO] - Test 5 | PASSED | PASSED | PASSED: break_from_nested_loop in 1.27s
2024-10-03 01:13:33 [INFO] - Test 6 | PASSED | PASSED | PASSED: break_loop in 1.26s
2024-10-03 01:13:34 [INFO] - Test 7 | PASSED | PASSED | FAILED: error[E0433]: failed to resolve: you might be missing crate `core`
 --> output\break_loop_nested:1:5
  |
1 | use core::ops::ControlFlow;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
: break_loop_nested in 1.23s
2024-10-03 01:13:36 [INFO] - Test 8 | FAILED: No Extract Function Assist found for the given selection of assists [] | N/A | N/A: break_loop_nested_labeled in 1.21s
2024-10-03 01:13:37 [INFO] - Test 9 | PASSED | PASSED | FAILED: error[E0433]: failed to resolve: you might be missing crate `core`
 --> output\break_loop_with_if:1:5
  |
1 | use core::ops::ControlFlow;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

warning: unreachable statement
  --> output\break_loop_with_if:16:5
   |
15 |     return ControlFlow::Break(());
   |     ----------------------------- any code following this expression is unreachable
16 |     *n += m;
   |     ^^^^^^^^ unreachable statement
   |
   = note: `#[warn(unreachable_code)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0433`.
: break_loop_with_if in 1.15s
2024-10-03 01:13:38 [INFO] - Test 10 | PASSED | PASSED | FAILED: error[E0428]: the name `main` is defined multiple times
  --> output\break_stmt:11:1
   |
1  | fn main() {
   | --------- previous definition of the value `main` here
...
11 | fn main() {
   | ^^^^^^^^^ `main` redefined here
   |
   = note: `main` must be defined only once in the value namespace of this module

warning: unused variable: `result`
 --> output\break_stmt:2:9
  |
2 |     let result = loop {
  |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`
  |
  = note: `#[warn(unused_variables)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0428`.
: break_stmt in 1.18s
2024-10-03 01:13:39 [INFO] - Test 11 | PASSED | PASSED | PASSED: break_with_value in 1.24s
